--- a/test/tpu/xla_test_job.yaml
+++ b/test/tpu/xla_test_job.yaml
@@ -31,6 +31,7 @@ spec:
   - name: dshm
     emptyDir:
       medium: Memory
+  activeDeadlineSeconds: 7200 # 2 hours
   containers:
   - name: xla-test
     securityContext:
