Pass Pod image through a IMAGE variable.

--- a/test/tpu/xla_test_job.yaml
+++ b/test/tpu/xla_test_job.yaml
@@ -36,7 +36,7 @@ spec:
   - name: xla-test
     securityContext:
       privileged: true
-    image: gcr.io/$PROJECT_ID/pytorch-xla-test:$BUILD_ID
+    image: $IMAGE
     command:
     - bash
     - -cxe
